Findbugs optimizations